kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealicious
  labels:
    app: mealicious
